--- a/testukol/src/App.css
+++ b/testukol/src/App.css
@@ -5,12 +5,12 @@
 }
 
 #pageWrapper {
-  width: 800px;
+  width: 80%;
   margin: 100px auto;
 }
 
 #workspace {
-  width: 800px;
+  width: 100%;
 
   border: 4px solid black;
 }
