--- a/testukol/src/App.css
+++ b/testukol/src/App.css
@@ -24,11 +24,24 @@
   height: 500px;
   padding: 5%;
 
+}
 
-  display: grid;
-  grid-template-areas: "h t" "b b";
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 75% 15%;
+@media screen and (max-width: 1000px) {
+  .configPageStructure {
+    display: grid;
+    grid-template-areas: "h" "t" "b";
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 50% 20%;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .configPageStructure {
+    display: grid;
+    grid-template-areas: "h t" "b b";
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 75% 15%;
+  }
 }
 
 #configExamplePage {
