--- a/testukol/src/components/button/Button.module.css
+++ b/testukol/src/components/button/Button.module.css
@@ -4,7 +4,7 @@
     display: inline-block;
     height: 40px;
 
-    background-color: #adadad;
+    background-color: var(--gray);
     color: white;
     border-radius: 15px;
 
