--- a/testukol/src/components/fields/Fields.module.css
+++ b/testukol/src/components/fields/Fields.module.css
@@ -44,7 +44,7 @@
     height: 100%;
 
     border-radius: 10px;
-    border: 2px solid #adadad;
+    border: 2px solid var(--gray);
 }
 
 .textareaValue {
@@ -57,6 +57,6 @@
     height: 100%;
 
     border-radius: 10px;
-    border: 2px solid #adadad;
+    border: 2px solid var(--gray);
     resize: none;
 }
