--- a/testukol/src/components/Fields/Fields.module.css
+++ b/testukol/src/components/Fields/Fields.module.css
@@ -2,14 +2,29 @@
     width: 100%;
     margin-bottom: 30px;
 
-    display: grid;
-    grid-template-areas: "l v";
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
+    /*display: grid;*/
+    /*grid-template-areas: "l v";*/
+    /*grid-template-columns: 50% 50%;*/
+    /*grid-template-rows: 100%;*/
 }
 
-.numericFieldHeight {
-    height: 30px;
+@media screen and (max-width: 1000px) {
+    .fieldStructure {
+        display: grid;
+        grid-template-areas: "l" "v";
+        grid-template-columns: 100%;
+        grid-template-rows: 45% 45%;
+
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .fieldStructure {
+        display: grid;
+        grid-template-areas: "l v";
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 100%;
+    }
 }
 
 .textareaHeight {
@@ -59,4 +74,31 @@
     border-radius: 10px;
     border: 2px solid var(--gray);
     resize: none;
+}
+
+
+/*TextField Component*/
+.textField {
+    width: 100%;
+    height: 40px;
+
+    border-radius: 10px;
+    border: 2px solid var(--gray);
+}
+
+.textareaField {
+    width: 100%;
+    height: 90px;
+
+    border-radius: 10px;
+    border: 2px solid var(--gray);
+}
+
+/*NumberField Component*/
+.numberField {
+    width: 100%;
+    min-height: 40px;
+
+    border-radius: 10px;
+    border: 2px solid var(--gray);
 }
